# funesdb

./: CMakeLists.txt  CMakePresets.json  rename.sh  rename_files.sh
.github/: labeler.yml
cmake/: dependencies.cmake  (+1 more)
src/v/funesproxy/: CMakeLists.txt  auth_utils.h  error.cc  error.h  fwd.h  logger.cc  logger.h  probe.cc  probe.h  reply.h  server.cc  server.h  sql_client_cache.cc  sql_client_cache.h  types.h  util.h
src/v/funesproxy/admin/api-doc/: config.json  header.json
src/v/funesproxy/api/api-doc/: header.json  rest.json  schema_registry_header.json
src/v/funesproxy/json/: CMakeLists.txt  error.cc  error.h  exceptions.h  iobuf.h  rjson_parse.h  rjson_util.h  types.h
src/v/funesproxy/json/requests/: brokers.h  create_consumer.h  error_reply.h  fetch.h  offset_commit.h  offset_fetch.h  partition_offsets.h  partitions.h  produce.h  subscribe_consumer.h
src/v/funesproxy/json/requests/test/: CMakeLists.txt  fetch.cc  produce.cc
src/v/funesproxy/json/test/: CMakeLists.txt  iobuf.cc  parse.cc
src/v/funesproxy/parsing/: CMakeLists.txt  error.cc  error.h  exceptions.h  from_chars.h  httpd.h
src/v/funesproxy/parsing/test/: CMakeLists.txt  from_chars.cc  httpd.cc
src/v/funesproxy/rest/: CMakeLists.txt  api.cc  api.h  configuration.cc  configuration.h  fwd.h  handlers.cc  handlers.h  proxy.cc  proxy.h
src/v/funesproxy/rest/test/: CMakeLists.txt  consumer_group.cc  fetch.cc  list_topics.cc  produce.cc
src/v/funesproxy/schema_registry/: CMakeLists.txt  api.cc  api.h  avro.cc  avro.h  configuration.cc  configuration.h  error.cc  error.h  errors.h  exceptions.h  fwd.h  handlers.cc  handlers.h  protobuf.cc  protobuf.h  schema_id_cache.h  schema_id_validation.h  seq_writer.cc  seq_writer.h  service.cc  service.h  sharded_store.cc  sharded_store.h  storage.h  store.h  subject_name_strategy.h  types.cc  types.h  util.h  validation.cc  validation.h  validation_metrics.h
src/v/funesproxy/schema_registry/protobuf/: CMakeLists.txt
src/v/funesproxy/schema_registry/requests/: compatibility.h  config.h  get_schemas_ids_id.h  get_schemas_ids_id_versions.h  get_subject_versions_version.h  post_subject_versions.h
src/v/funesproxy/schema_registry/test/: CMakeLists.txt  avro_payloads.h  client_utils.h  compatibility_3rdparty.cc  compatibility_avro.cc  compatibility_avro.h  compatibility_protobuf.cc  compatibility_protobuf.h  compatibility_store.cc  consume_to_store.cc  delete_subject_endpoints.cc  get_schema_types.cc  post_subjects_subject_version.cc  sanitize_avro.cc  schema_id_cache.cc  sharded_store.cc  storage.cc  store.cc  util.cc  validation.cc
src/v/funesproxy/test/: CMakeLists.txt  errors.cc  funesproxy_fixture.h  one_shot.cc  sql_client_cache.cc  utils.h
(+1363 files in other folders)
